Fix body content width (remove horizontal scrolling)

--- a/wikipedia-beautifier.css
+++ b/wikipedia-beautifier.css
@@ -47,6 +47,7 @@
     margin-right: auto;
     margin-top: 1em;
     background: #fbfbfb;
+    width: auto !important;
 }
 
 .infobox,
